// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processAnsiString > hyperlink handling > should handle multiple hyperlinks 1`] = `
[
  {
    "hyperlinkUrl": "https://example1.com",
    "isEscapeSequence": true,
    "isGrapheme": false,
    "isHyperlink": true,
    "isHyperlinkStart": true,
    "width": 0,
  },
  {
    "hyperlinkUrl": "https://example1.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "L",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example1.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "i",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example1.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "n",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example1.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "k",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example1.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": " ",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example1.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "1",
    "width": 1,
  },
  {
    "isEscapeSequence": true,
    "isGrapheme": false,
    "isHyperlink": true,
    "isHyperlinkEnd": true,
    "width": 0,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": " ",
    "width": 1,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": "a",
    "width": 1,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": "n",
    "width": 1,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": "d",
    "width": 1,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": " ",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example2.com",
    "isEscapeSequence": true,
    "isGrapheme": false,
    "isHyperlink": true,
    "isHyperlinkStart": true,
    "width": 0,
  },
  {
    "hyperlinkUrl": "https://example2.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "L",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example2.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "i",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example2.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "n",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example2.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "k",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example2.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": " ",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example2.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "2",
    "width": 1,
  },
  {
    "isEscapeSequence": true,
    "isGrapheme": false,
    "isHyperlink": true,
    "isHyperlinkEnd": true,
    "width": 0,
  },
]
`;

exports[`processAnsiString > hyperlink handling > should handle nested ANSI sequences within hyperlinks 1`] = `
[
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": true,
    "isGrapheme": false,
    "isHyperlink": true,
    "isHyperlinkStart": true,
    "width": 0,
  },
  {
    "isEscapeSequence": true,
    "isGrapheme": false,
    "text": "[31m",
    "width": 0,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "R",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "e",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "d",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": " ",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "L",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "i",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "n",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "k",
    "width": 1,
  },
  {
    "isEscapeSequence": true,
    "isGrapheme": false,
    "text": "[0m",
    "width": 0,
  },
  {
    "isEscapeSequence": true,
    "isGrapheme": false,
    "isHyperlink": true,
    "isHyperlinkEnd": true,
    "width": 0,
  },
]
`;

exports[`processAnsiString > hyperlink handling > should process hyperlink sequences 1`] = `
[
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": true,
    "isGrapheme": false,
    "isHyperlink": true,
    "isHyperlinkStart": true,
    "width": 0,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "C",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "l",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "i",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "c",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "k",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": " ",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "h",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "e",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "r",
    "width": 1,
  },
  {
    "hyperlinkUrl": "https://example.com",
    "isEscapeSequence": false,
    "isGrapheme": true,
    "isHyperlink": true,
    "text": "e",
    "width": 1,
  },
  {
    "isEscapeSequence": true,
    "isGrapheme": false,
    "isHyperlink": true,
    "isHyperlinkEnd": true,
    "width": 0,
  },
]
`;

exports[`processAnsiString > regular ANSI sequences > should handle nested ANSI sequences 1`] = `
[
  {
    "isEscapeSequence": true,
    "isGrapheme": false,
    "text": "[31m",
    "width": 0,
  },
  {
    "isEscapeSequence": true,
    "isGrapheme": false,
    "text": "[1m",
    "width": 0,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": "B",
    "width": 1,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": "o",
    "width": 1,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": "l",
    "width": 1,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": "d",
    "width": 1,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": " ",
    "width": 1,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": "R",
    "width": 1,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": "e",
    "width": 1,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": "d",
    "width": 1,
  },
  {
    "isEscapeSequence": true,
    "isGrapheme": false,
    "text": "[0m",
    "width": 0,
  },
]
`;

exports[`processAnsiString > regular ANSI sequences > should process basic ANSI color codes 1`] = `
[
  {
    "isEscapeSequence": true,
    "isGrapheme": false,
    "text": "[31m",
    "width": 0,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": "H",
    "width": 1,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": "e",
    "width": 1,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": "l",
    "width": 1,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": "l",
    "width": 1,
  },
  {
    "isEscapeSequence": false,
    "isGrapheme": true,
    "text": "o",
    "width": 1,
  },
  {
    "isEscapeSequence": true,
    "isGrapheme": false,
    "text": "[0m",
    "width": 0,
  },
]
`;
